--- a/src/App.scss
+++ b/src/App.scss
@@ -1,6 +1,6 @@
 @import url("https://fonts.googleapis.com/css2?family=Ubuntu:wght@400;500;700&display=swap");
 
-// Variables and static shit
+// Variables and static stuff
 
 // Primary colors
 $color-marine-blue: hsl(213, 96%, 18%);
@@ -176,13 +176,14 @@ body {
   display: flex;
   justify-content: center;
   align-items: center;
-  min-height: 100vh;
-  max-height: 100vh;
+
+  height: auto;
 }
 
 main {
   border-radius: 1rem;
   display: flex;
+  margin-top: 2rem;
   padding: 1rem;
   height: 36rem;
   width: 58rem;
@@ -324,6 +325,7 @@ input {
   color: $color-cool-gray;
   background-color: $color-magnolia;
   border-radius: 0.5rem;
+  height: 8rem;
   padding: 1rem;
 }
 
@@ -431,7 +433,6 @@ input {
   }
 
   body {
-    overflow: hidden;
     display: block;
     min-width: 0;
   }
@@ -450,7 +451,7 @@ input {
   form {
     left: 50%;
     top: 10rem;
-    height: 50vh;
+    height: 30rem;
     transform: translate(-50%);
     margin-left: auto;
     margin-right: auto;
@@ -480,24 +481,75 @@ input {
     display: none;
   }
 
-  // I changed my mind and did not want to include a footer but If I change my mind here is the start
-  /* footer {
-    position: absolute;
-    bottom: 0;
-    background-color: $color-white;
-    width: 100%;
-    height: 5rem;
-    z-index: 1;
-  } */
-
   button {
     bottom: -16rem;
   }
 }
 
-@media only screen and (max-width: 380px) {
+@media only screen and (max-width: 485px) {
+  .monthsFree {
+    right: 3.5rem;
+  }
+
+  p {
+    font-size: 14px;
+  }
+
+  form {
+    height: 31rem;
+  }
+}
+
+@media only screen and (max-width: 390px) {
+  .sumContainer p {
+    width: 100%;
+    text-align: justify;
+    padding: 0.8rem 0;
+  }
+
+  .sumValueRight {
+    position: absolute;
+    right: auto;
+    left: 2.8rem;
+    margin-top: 1rem;
+  }
+
+  .sumValueRight2 {
+    position: absolute;
+    right: auto;
+    left: 0rem;
+    margin-top: 1.6rem;
+    text-align: right;
+    display: inline-block;
+  }
+  .sumValueRightTotal {
+    position: absolute;
+    left: 3rem;
+    right: auto;
+    margin-top: 1.6rem;
+    color: $color-marine-blue;
+    font-size: 1.2rem;
+  }
+
+  .monthsFree {
+    left: 5.5rem;
+    padding-top: 2.2rem;
+  }
+
   form {
     padding-left: 10vw;
     padding-right: 10vw;
+  }
+}
+
+@media only screen and (max-width: 350px) {
+  .addon-form-box {
+    height: 12rem;
+  }
+
+  .monthsFree {
+    left: auto;
+    right: 3.5rem;
+    padding-top: 2.2rem;
   }
 }
